plugins {
    id 'java'
}

ext {
    versions = [
            junitPlatform: '5.3.1'
    ]
}

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

dependencies {
    // This dependency is found on compile classpath of this component and consumers.
    compileOnly 'org.projectlombok:lombok:1.18.2'

    testCompile 'org.projectlombok:lombok:1.18.2'
    testCompile "org.junit.jupiter:junit-jupiter-api:${versions.junitPlatform}"
    testCompile "org.junit.jupiter:junit-jupiter-engine:${versions.junitPlatform}"
    testCompile "org.junit.jupiter:junit-jupiter-params:${versions.junitPlatform}"
}

// In this section you declare where to find the dependencies of your project
repositories {
    jcenter()
}

test {

    useJUnitPlatform {
        excludeTags 'integration'
        includeEngines 'junit-jupiter'
    }

    enableAssertions = true
    testLogging.showStandardStreams = false

    include '**/**Test.*'
    include '**/**Tests.*'
}
